; ModuleID = '/home/carl/AnghaBench/sqlcipher/src/extr_test1.c_xLogcallback.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/src/extr_test1.c_xLogcallback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }

@logcallback = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@TCL_EVAL_GLOBAL = common dso_local global i32 0, align 4
@TCL_EVAL_DIRECT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32, i8*)* @xLogcallback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @xLogcallback(i8* %0, i32 %1, i8* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %8 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @logcallback, i32 0, i32 1), align 4
  %9 = call i32* @Tcl_DuplicateObj(i32 %8)
  store i32* %9, i32** %7, align 8
  %10 = load i32*, i32** %7, align 8
  %11 = call i32 @Tcl_IncrRefCount(i32* %10)
  %12 = load i32*, i32** %7, align 8
  %13 = load i32, i32* %5, align 4
  %14 = call i8* @sqlite3ErrName(i32 %13)
  %15 = call i32 @Tcl_NewStringObj(i8* %14, i32 -1)
  %16 = call i32 @Tcl_ListObjAppendElement(i32 0, i32* %12, i32 %15)
  %17 = load i32*, i32** %7, align 8
  %18 = load i8*, i8** %6, align 8
  %19 = call i32 @Tcl_NewStringObj(i8* %18, i32 -1)
  %20 = call i32 @Tcl_ListObjAppendElement(i32 0, i32* %17, i32 %19)
  %21 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @logcallback, i32 0, i32 0), align 4
  %22 = load i32*, i32** %7, align 8
  %23 = load i32, i32* @TCL_EVAL_GLOBAL, align 4
  %24 = load i32, i32* @TCL_EVAL_DIRECT, align 4
  %25 = or i32 %23, %24
  %26 = call i32 @Tcl_EvalObjEx(i32 %21, i32* %22, i32 %25)
  %27 = load i32*, i32** %7, align 8
  %28 = call i32 @Tcl_DecrRefCount(i32* %27)
  ret void
}

declare dso_local i32* @Tcl_DuplicateObj(i32) #1

declare dso_local i32 @Tcl_IncrRefCount(i32*) #1

declare dso_local i32 @Tcl_ListObjAppendElement(i32, i32*, i32) #1

declare dso_local i32 @Tcl_NewStringObj(i8*, i32) #1

declare dso_local i8* @sqlite3ErrName(i32) #1

declare dso_local i32 @Tcl_EvalObjEx(i32, i32*, i32) #1

declare dso_local i32 @Tcl_DecrRefCount(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
